devops/k8s/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: pipeline
  labels:
    name: pipeline
