devops/k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  namespace: pipeline 
spec:
  selector:
    app: backend  
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
